# arfedora-welcome

./: README.md  arfedora-welcome.spec  com.github.yucefsourani.Arfedorawelcome.json~  gui_widgets.py  meson.build
data/: com.github.yucefsourani.Arfedorawelcome.appdata.xml  com.github.yucefsourani.Arfedorawelcome.desktop.in  com.github.yucefsourani.Arfedorawelcome.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  ar.po  arfedora_welcome.pot  meson.build
src/: about.py  arfedora-welcome.gresource.xml  arfedora-welcome.in  classesplugin.py  gui_widgets.py  main.py  main_page.py  meson.build  output_page.py  utils.py  window.py  window.ui
src/plugins/: 00-albasheer_launcher.py  99-aosus.py  99-arfedora_blogspot.py  99-fedora_ask.py  99-fedora_magazine.py  99-fedora_project.py  99-fedora_quick_docs.py  99-linuxac.py  ArduinoIDE.py  ArduinoIDEv2.py  Ciano.py  Fritzing.py  GitKraken.py  Marker.py  MyPaint.py  PulseEffects.py  Skype.py  Viber.py  VidCutter.py  albasheer.py  albasheer_launcher.py  android_studio_fedora.py  antigravity.py  anydesk.py  arfedora_blogspot.py  atom_fedora.py  audacity_freeworld_fedora.py  blender_fedora.py  blender_flatpak.py  brave.py  broadcom_fedora.py  chromium_fedora.py  codecs_fedora_f31.py  codecs_fedora_f43.py  compression_fedora.py  compression_fedora_43.py  darktable_flatpak.py  dnf_fastestmirror.py  dnf_keepcache.py  dnf_repos_manager.py  (+44 more)
src/xxcx/: ArduinoIDE.py  ArduinoIDEv2.py  Ciano.py  Fritzing.py  GitKraken.py  HandBrake.py  Marker.py  MyPaint.py  PulseEffects.py  Skype.py  Viber.py  albasheer.py  android_studio_fedora.py  anydesk.py  atom_fedora.py  audacity_freeworld_fedora.py  blender_fedora.py  blender_flatpak.py  brackets.py  brave.py  broadcom_fedora.py  chromium_fedora.py  codeblocks_fedora.py  codecs_fedora_f31.py  compression_fedora.py  darktable_fedora.py  darktable_flatpak.py  dnf_fastestmirror.py  dnf_keepcache.py  edge.py  ffmpegthumbs_fedora.py  firefox_fedora.py  firefox_flatpak.py  flameshot_fedora.py  fonts_fedora.py  geany_fedora.py  gimp_fedora.py  gnome_builder.py  godot.py  google_chrome_fedora_64bit.py  (+18 more)
src/xxcx/universalplugin/: uplugin.py
